ref: updated  donation dtos
