# docs/swagger.json
@@ -2256,7 +2256,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/donation_category.DonationCategoryResponse"
+                                            "$ref": "#/definitions/donation_category.DonationCategoryListResponse"
                                         }
                                     }
                                 }
@@ -2652,7 +2652,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/donation_company.DonationCompanyResponse"
+                                            "$ref": "#/definitions/donation_company.DonationCompanyListResponse"
                                         }
                                     }
                                 }
@@ -5115,17 +5115,6 @@
                 }
             }
         },
-        "donation_category.DonationCategoryResponse": {
-            "type": "object",
-            "properties": {
-                "category_name": {
-                    "type": "string"
-                },
-                "donation_icon": {
-                    "type": "string"
-                }
-            }
-        },
         "donation_company.DonationCompanyListResponse": {
             "type": "object",
             "properties": {
@@ -5148,20 +5137,6 @@
                     "type": "boolean"
                 },
                 "last_modified_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "donation_company.DonationCompanyResponse": {
-            "type": "object",
-            "properties": {
-                "account_number": {
-                    "type": "string"
-                },
-                "company_logo": {
-                    "type": "string"
-                },
-                "company_name": {
                     "type": "string"
                 }
             }
